# DikTux

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
diktux/: __init__.py  __main__.py  app.py  config.py  state.py
diktux/services/: audio_recorder.py  credentials.py  hotkey.py  llm.py  local_transcription.py  paste.py  quality.py  transcription.py
diktux/ui/: onboarding.py  settings_viewmodel.py  settings_window.py  tray.py  tray_icons.py
diktux/workflows/: base.py  calm_down.py  emoji_text.py  text_improvement.py  transcription.py
docs/superpowers/plans/: 2026-06-23-diktux.md
packaging/: diktux-udev-setup.md  diktux.desktop
tests/: test_app.py  test_app_llm_workflows.py  test_app_toggle.py  test_audio_recorder.py  test_calm_down_workflow.py  test_config.py  test_credentials.py  test_emoji_text_workflow.py  test_full_suite.py  test_hotkey_listener.py  test_hotkey_matcher.py  test_llm.py  test_local_transcription.py  test_onboarding.py  test_paste.py  test_quality.py  test_settings_viewmodel.py  test_settings_window_import.py  test_smoke.py  test_state.py  test_text_improvement_workflow.py  test_transcription.py  test_transcription_workflow.py  test_tray.py  test_tray_icons.py  test_workflow_base.py
