[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diktux"
version = "0.1.0"
description = "Voice dictation daemon for Linux with global hotkeys, Whisper and LLM post-processing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jens Vossen" }]
dependencies = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24",
    "httpx>=0.27",
    "evdev>=1.6",
    "pystray>=0.19",
    "Pillow>=10.0",
    "secretstorage>=3.3",
]

[project.optional-dependencies]
local = ["faster-whisper>=1.0"]
gui = ["PyGObject>=3.46"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
diktux = "diktux.__main__:main"

[tool.setuptools.packages.find]
include = ["diktux*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
